[Platform-145] Brand Fonts, Alignment Fixes, Demo Fix (#374)
* Update font to arbeit, adjust alignment on various components

* update demo tag

* remove bold from banner

--- a/packages/halo/scss/_variables.scss
+++ b/packages/halo/scss/_variables.scss
@@ -6,7 +6,7 @@
 // --------------------
 // FAMILY
 
-$font-family-primary: 'Helvetica Neue', arial, 'Noto Sans', sans-serif,
+$font-family-primary: 'Arbeit', 'Helvetica Neue', arial, 'Noto Sans', sans-serif,
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $font-family-serif: ui-serif, georgia, cambria, 'Times New Roman', times, serif;
 $font-family-monospace: ui-monospace, sfmono-regular, menlo, monaco, consolas,
