--- a/packages/halo/src/components/form/Select/styles.module.scss
+++ b/packages/halo/src/components/form/Select/styles.module.scss
@@ -9,7 +9,7 @@
   -webkit-appearance: none;
   background-image: url("data:image/svg+xml,%3Csvg width='14' height='8' viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.632859 0.465967C0.242335 0.856491 0.242335 1.48966 0.632859 1.88018L6.27879 7.52611C6.28239 7.52982 6.28603 7.53351 6.2897 7.53718C6.68022 7.92771 7.31339 7.92771 7.70391 7.53719L13.3608 1.88033C13.7513 1.48981 13.7513 0.856642 13.3608 0.466118C12.9702 0.0755936 12.3371 0.0755936 11.9466 0.466118L6.99689 5.41578L2.04707 0.465967C1.65655 0.0754423 1.02338 0.0754423 0.632859 0.465967Z' fill='currentColor'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat, repeat;
-  background-position: right tempo(3) top calc(50% - 1px), 0 0;
+  background-position: right tempo(3) top 50%, 0 0;
 
   &::-ms-expand {
     display: none;
