--- a/packages/halo/src/tailwind.scss
+++ b/packages/halo/src/tailwind.scss
@@ -61,6 +61,13 @@
 @font-face {
   font-family: 'Arbeit';
   font-style: normal;
+  font-weight: 500;
+  src: url('/fonts/Arbeit-Bold.otf');
+}
+
+@font-face {
+  font-family: 'Arbeit';
+  font-style: normal;
   font-weight: bold;
   src: url('/fonts/Arbeit-Bold.otf');
 }
